deixando aplicação responsiva

--- a/src/assets/styles/input.scss
+++ b/src/assets/styles/input.scss
@@ -6,6 +6,7 @@ input {
   min-height: 35px;
   font-size: 16px;
   transition: all .5s;
+  width: 100%;
   border-radius: 5px;
   outline: unset;
   box-shadow: inset 0px 0px 0px 2px var(--brand-color-2);
