--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+@import './../../assets/styles/variables.scss';
+
 header {
   max-width: 1920px;
   min-height: 90px;
@@ -29,6 +31,10 @@ header {
         gap: 10px;
         margin-right: 50px;
 
+        @media screen and (max-width: $mobile) {
+          margin-right: 20px;
+        }
+
         label {
           font-size: 25px;
           font-weight: 700;
@@ -37,6 +43,10 @@ header {
               var(--brand-color-4) 90%);
           background-clip: text;
           -webkit-text-fill-color: transparent;
+
+          @media screen and (max-width: $mobile) {
+            display: none;
+          }
         }
 
         .logo {
@@ -46,6 +56,11 @@ header {
           width: 55px;
           height: 50px;
           background-color: var(--brand-color-1);
+
+          @media screen and (max-width: $mobile) {
+            width: 30px;
+            height: 25px;
+          }
         }
       }
 
@@ -56,6 +71,10 @@ header {
         align-items: center;
         padding: 0px 15px;
         cursor: pointer;
+
+        @media screen and (max-width: $mobile) {
+          gap: 10px;
+        }
 
         * {
           cursor: pointer;
