--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: end;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   overflow: hidden;
   background-position: center;
