--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -65,6 +65,9 @@
   .content-movie-wrapper {
     .list {
       position: relative;
+      &:not(:first-child) {
+        margin-top: 100px;
+      }
 
       h3 {
         padding-left: 20px;
