--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,6 +30,11 @@ header {
         align-items: center;
         gap: 10px;
         margin-right: 50px;
+        cursor: pointer;
+
+        * {
+          cursor: pointer;
+        }
 
         @media screen and (max-width: $mobile) {
           margin-right: 20px;
