--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,4 +1,40 @@
 main {
   max-width: 1920px;
   margin: auto;
+  
+  .page-content {
+    min-height: calc(100vh - 212px);
+    
+  }
+
+}
+.scroll-top {
+  background-color: var(--brand-color-1);
+  width: 50px; 
+  height: 50px;
+  position: fixed;
+  bottom: -50px;
+  transition: all 0.5s;
+  right: 0px;
+  border-radius: 5px 0px 0px 5px;
+  cursor: pointer;
+
+  &.show {
+    bottom: 60px;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    margin: auto;
+    mask-image: url(./../../assets/icons/arrow-up.svg);
+    mask-repeat: no-repeat;
+    mask-size: contain;
+    background-color: white;
+    height: 30px;
+    width: 30px;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+  }
 }
