--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -55,8 +55,8 @@
       right: 0;
       top: 0;
       bottom: 0;
-      background-image: url(./../../assets/bg.svg);
-      background-size: contain;
+      background-image: url(./../../assets/bg.png);
+      background-size: 2036px;
       background-position: center;
       background-repeat: no-repeat;
     }
