--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,4 +1,17 @@
 .main-details-wrapper {
   min-height: 100vh;
   width: 100%;
+  position: relative;
+  top: 90px;
+  transition: all 0.5s;
+
+  @media screen and (max-width: 1920px) {
+    padding: 0px 30px;
+  }
+
+  .movie-overview {
+    width: 100%;
+    max-width: 1320px;
+    height: 100%;
+  }
 }
