--- a/src/components/PresentationDetails/PresentationDetails.scss
+++ b/src/components/PresentationDetails/PresentationDetails.scss
@@ -1,56 +1,140 @@
-.presentations {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  border-radius: 10px;
-  max-height: 1320px;
+.presentation-details-wrapper {
+  position: relative;
 
-  figure {
+  .presentations {
+    display: flex;
+    overflow: hidden;
     width: 100%;
-    height: 100%;
     border-radius: 10px;
-    position: relative;
-    box-shadow: inset 0px 0px 0px 10p 100px black;
+    max-height: 1320px;
 
-    &.movie {
-      cursor: pointer;
-
-      img {
-        opacity: 0.8;
-      }
-    }
-
-    img {
-      width: 100vw;
-      max-width: 1320px;
+    figure {
+      width: 100%;
       height: 100%;
       border-radius: 10px;
+      position: relative;
+      box-shadow: inset 0px 0px 0px 10p 100px black;
 
-      @media screen and (max-width: 1920px) {
-        width: calc(100vw - 60px);
+      &.movie {
+        cursor: pointer;
+
+        img {
+          opacity: 0.8;
+        }
+      }
+
+      img {
+        width: 100vw;
+        max-width: 1320px;
+        height: 100%;
+        border-radius: 10px;
+
+        @media screen and (max-width: 1920px) {
+          width: calc(100vw - 60px);
+        }
+      }
+      .play-btn {
+        position: absolute;
+        top: calc(50% - 35px);
+        left: calc(50% - 35px);
+        width: 70px;
+        height: 70px;
+        background-color: var(--brand-color-1);
+        border-radius: 140px;
+
+        &::before {
+          content: "";
+          mask-image: url(./../../assets/icons/play.svg);
+          mask-size: contain;
+          mask-repeat: no-repeat;
+          background-color: white;
+          height: 50px;
+          width: 50px;
+          top: 10px;
+          left: 12px;
+          position: absolute;
+        }
       }
     }
-    .play-btn {
-      position: absolute;
-      top: calc(50% - 35px);
-      left: calc(50% - 35px);
-      width: 70px;
-      height: 70px;
-      background-color: var(--brand-color-1);
-      border-radius: 140px;
+  }
+
+  .index-nav {
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    bottom: 20px;
+    left: calc(50% - (20px * var(--data-length)));
+
+    @media screen and (max-width: 1320px) {
+      left: calc(50vw - (20px * var(--data-length)));
+    }
+
+    .dot {
+      width: 10px;
+      height: 10px;
+      border-radius: 10px;
+      background-color: var(--black-100);
+      transition: all 0.5s;
+      cursor: pointer;
+
+      &.active {
+        background-color: white;
+      }
+    }
+  }
+
+  .common-controls {
+    position: absolute;
+    height: 50px;
+    width: 0px;
+    background-color: white;
+    bottom: calc(50% - 25px);
+    transition: all 0.5s;
+    overflow: hidden;
+    opacity: 0;
+
+    &.show {
+      opacity: 1;
+      width: 35px;
 
       &::before {
-        content: '';
-        mask-image: url(./../../assets/icons/play.svg);
-        mask-size: contain;
-        mask-repeat: no-repeat;
-        background-color: white;
-        height: 50px;
         width: 50px;
-        top: 10px;
-        left: 12px;
-        position: absolute;
       }
     }
+
+    &::before {
+      content: '';
+      bottom: 0px;
+      height: 50px;
+      width: 0px;
+      transition: all 0.5s;
+      position: absolute;
+      background-color: var(--brand-color-1);
+      mask-repeat: no-repeat;
+      mask-position: center;
+      mask-size: contain;
+      cursor: pointer;
+    }
+  }
+
+  .control-left {
+    @extend .common-controls;
+    left: 0px;
+    border-radius: 0px 50px 50px 0px;
+    &::before {
+      mask-image: url(./../../assets/icons/chevron-left.svg);
+      left: -12px;
+
+    }
+  }
+  .control-right {
+    @extend .common-controls;
+    right: 0px;
+    border-radius: 50px 0px 0px 50px;
+    &::before {
+      mask-image: url(./../../assets/icons/chevron-right.svg);
+      right: -12px;
+    }
+
   }
 }
