--- a/src/components/PresentationDetails/PresentationDetails.scss
+++ b/src/components/PresentationDetails/PresentationDetails.scss
@@ -15,6 +15,18 @@
       position: relative;
       box-shadow: inset 0px 0px 0px 10p 100px black;
 
+      .frame {
+        height: 90vh;
+        max-width: 90vw;
+        width: calc(100vw - 40px);
+
+        iframe {
+          border: 0px;
+          width: 100%;
+          height: 100%;
+        }
+      }
+
       &.movie {
         cursor: pointer;
 
