melhoria na tela de detalhes

--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -4,6 +4,7 @@
   --brand-color-3: #F9CC0D;
   --brand-color-4: #1884F7;
   --black: #0A070B;
+  --black-400: #0A070B;
   --black-300: #363536;
   --black-200: #4F4E50;
   --black-100: #807E81;
