--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -4,8 +4,9 @@
   position: relative;
   top: 90px;
   transition: all 0.5s;
+  color: white;
 
-  @media screen and (max-width: 1920px) {
+  @media screen and (max-width: 1990px) {
     padding: 0px 30px;
   }
 
@@ -13,5 +14,66 @@
     width: 100%;
     max-width: 1320px;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+
+    div.title-overview {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      .year-time-detail {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 0.75rem;
+
+        .tagline {
+          color: var(--black-100);
+        }
+
+        .time {
+          display: flex;
+          gap: 5px;
+          font-weight: 600;
+          font-size: 20px;
+
+          span:first-child {
+            position: relative;
+            &::after {
+              content: "●";
+              position: relative;
+              margin-left: 5px;
+            }
+          }
+        }
+      }
+
+      .title {
+        font-size: clamp(20px, 8vw, 38px);
+        font-weight: 600;
+
+        &.skeleton {
+          min-height: 40px;
+          width: 50vw;
+          max-width: 400px;
+        }
+      }
+
+      .description-title {
+        margin-top: 1.75rem;
+        font-weight: 600;
+        font-size: 24px;
+      }
+
+      .overview {
+        color: var(--black-100);
+
+        &.skeleton {
+          min-height: 100px;
+        }
+      }
+    }
   }
 }
