--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -9,69 +9,216 @@
   @media screen and (max-width: 1990px) {
     padding: 0px 30px;
   }
-
-  .movie-overview {
-    width: 100%;
-    max-width: 1320px;
-    height: 100%;
+  .movie-main-details {
     display: flex;
-    flex-direction: column;
-    gap: 40px;
+    gap: 30px;
+    flex-wrap: wrap;
 
-    div.title-overview {
+    .movie-overview {
+      width: 100%;
+      max-width: 1320px;
+      height: 100%;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 40px;
 
-      .year-time-detail {
+      div.title-overview {
         display: flex;
         flex-direction: column;
         gap: 10px;
-        margin-top: 0.75rem;
 
-        .tagline {
-          color: var(--black-100);
-        }
-
-        .time {
+        .year-time-detail {
           display: flex;
-          gap: 5px;
-          font-weight: 600;
-          font-size: 20px;
+          flex-direction: column;
+          gap: 10px;
+          margin-top: 0.75rem;
 
-          span:first-child {
-            position: relative;
-            &::after {
-              content: "●";
+          .duration.skeleton {
+            min-height: 40px;
+            max-width: 200px;
+          }
+
+          .tagline {
+            color: var(--black-100);
+            width: 40%;
+          }
+
+          .time {
+            display: flex;
+            gap: 5px;
+            font-weight: 600;
+            font-size: 20px;
+
+            span:first-child {
               position: relative;
-              margin-left: 5px;
+              &::after {
+                content: "●";
+                position: relative;
+                margin-left: 5px;
+              }
             }
           }
         }
-      }
 
-      .title {
-        font-size: clamp(20px, 8vw, 38px);
-        font-weight: 600;
+        .title {
+          font-size: clamp(20px, 8vw, 38px);
+          font-weight: 600;
 
-        &.skeleton {
-          min-height: 40px;
-          width: 50vw;
-          max-width: 400px;
+          &.skeleton {
+            min-height: 40px;
+            width: 50vw;
+            max-width: 400px;
+          }
+        }
+
+        .description-title {
+          margin-top: 1.75rem;
+          font-weight: 600;
+          font-size: 24px;
+        }
+
+        .overview {
+          color: var(--black-100);
+
+          &.skeleton {
+            min-height: 100px;
+          }
         }
       }
+    }
 
-      .description-title {
-        margin-top: 1.75rem;
-        font-weight: 600;
-        font-size: 24px;
+    .movies-for-you-wrapper {
+      display: flex;
+      flex-direction: column;
+      transition: all 0.5s;
+      gap: 30px;
+
+      @media screen and (max-width: 1835px) {
+        margin-top: 2rem;
+        width: 100%;
       }
 
-      .overview {
-        color: var(--black-100);
+      .title-loading {
+        min-height: 40px;
+        max-width: 250px;
+      }
 
-        &.skeleton {
-          min-height: 100px;
+      h4 {
+        transition: all 0.5s;
+        font-size: clamp(20px, 5vw, 2rem);
+      }
+
+      .similar-wrapper {
+        width: 100%;
+        max-height: 750px;
+        align-items: center;
+        max-width: 420px;
+        transition: all 0.5s;
+        overflow: auto;
+
+        @media screen and (max-width: 1835px) {
+          max-width: unset;
+        }
+
+        .similar-container {
+          overflow: auto;
+          display: flex;
+          flex-wrap: wrap;
+          transition: all 0.5s;
+          gap: 15px;
+
+          @media screen and (max-width: 1835px) {
+            flex-wrap: nowrap;
+            width: max-content;
+            padding: 10px;
+
+            .see-more {
+              width: 160px !important;
+
+              &::before {
+                bottom: 35% !important;
+              }
+            }
+          }
+
+          .see-more {
+            width: calc(100% - 20px);
+            min-height: 100px;
+            transition: all 0.5s;
+            border-radius: 10px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            font-size: clamp(20px, 1vw, 30px);
+            cursor: pointer;
+
+            span {
+              position: relative;
+              top: -15px;
+            }
+
+            &::before {
+              content: "";
+              position: absolute;
+              transition: all 0.5s;
+              width: 20px;
+              height: 20px;
+              mask-image: url(./../../assets/icons/reload.svg);
+              mask-size: contain;
+              mask-repeat: no-repeat;
+              mask-position: center;
+              background-color: var(--brand-color-1);
+              bottom: 20px;
+            }
+
+            &:hover {
+              border: 2px solid var(--brand-color-1);
+              color: #ff5871;
+
+              &::before {
+                background-color: white;
+                transform: rotate(360deg);
+              }
+            }
+          }
+
+          .similar-card {
+            width: 194px;
+            height: 290px;
+            border-radius: 10px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            position: relative;
+
+            &::before {
+              content: "";
+              bottom: 0px;
+              width: 100%;
+              height: 50%;
+              position: absolute;
+              background: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0) 0%,
+                #000000c7 100%
+              );
+            }
+
+            &::after {
+              content: attr(card-title);
+              bottom: 0px;
+              position: absolute;
+              text-align: center;
+              margin: 10px auto;
+              width: 100%;
+              font-size: clamp(20px, 0.3vw, 25px);
+            }
+
+            &.skeleton {
+              height: 290px !important;
+            }
+          }
         }
       }
     }
