--- a/src/components/PresentationDetails/PresentationDetails.scss
+++ b/src/components/PresentationDetails/PresentationDetails.scss
@@ -20,12 +20,14 @@
       position: relative;
       box-shadow: inset 0px 0px 0px 10p 100px black;
 
+      &.skeleton-figure {
+       max-width: 0px;
+      }
+
       .frame {
         height: 90vh;
         max-width: 90vw;
         width: calc(100vw - 40px);
-
-
 
         iframe {
           border: 0px;
@@ -48,6 +50,11 @@
         max-width: 1320px;
         height: 100%;
         border-radius: 10px;
+        max-height: 800px;
+
+        &.skeleton {
+          height: 100% !important;
+        }
 
         @media screen and (max-width: 1920px) {
           width: calc(100vw - 60px);
