--- a/src/components/DetailsPage/DetailsOverview/DetailsOverview.scss
+++ b/src/components/DetailsPage/DetailsOverview/DetailsOverview.scss
@@ -6,6 +6,12 @@
   flex-direction: column;
   gap: 40px;
 
+  h3 {
+    margin-top: 1.75rem;
+    font-weight: 600;
+    font-size: 24px;
+  }
+
   div.title-overview {
     display: flex;
     flex-direction: column;
