--- a/src/components/DetailsPage/DetailsCrewCast/Cast/Cast.scss
+++ b/src/components/DetailsPage/DetailsCrewCast/Cast/Cast.scss
@@ -53,12 +53,28 @@
   .details-modal {
     display: flex;
     background-color: var(--black-300);
+    max-width: 1368px;
+    max-height: 450px;
+    overflow: auto;
 
-    img,
-    figure {
-      max-width: 300px;
-      max-height: 454px;
-      width: 100%;
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      max-height: calc(100vh - 40px);
+
+      img {
+        min-width: 100%;
+        max-height: unset !important;
+      }
+
+      .info-wrapper > label {
+        overflow: hidden !important;
+        max-height: unset !important;
+      }
+    }
+
+    img {
+      min-width: 300px;
+      max-height: 450px;
       height: 100%;
     }
 
@@ -67,6 +83,12 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
+
+      label {
+        font-size: clamp(15px, 2vw, 20px);
+        max-height: 378px;
+        overflow: auto;
+      }
     }
   }
 }
