--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -109,6 +109,23 @@ header {
       display: flex;
       justify-content: center;
       gap: 10px;
+
+      .search-wrapper {
+        position: relative;
+
+        .search-icon {
+          content: '';
+          position: absolute;
+          left: 15px;
+          top: 8px;
+          width: 20px;
+          height: 20px;
+          mask-image: url(./../../assets/icons/search.svg);
+          background-color: var(--black-100);
+          mask-size: contain;
+          mask-repeat: no-repeat;
+        }
+      }
     }
   }
 }
