melhoria no search

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -112,6 +112,12 @@ header {
 
       .search-wrapper {
         position: relative;
+        z-index: 2;
+
+        input {
+          color: black;
+          font-weight: 600;
+        }
 
         .search-icon {
           content: '';
