--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,16 +1,17 @@
 main {
   max-width: 1920px;
   margin: auto;
-  
+
   .page-content {
     min-height: calc(100vh - 212px);
-    
+    transition: filter 0.5s;
   }
 
 }
+
 .scroll-top {
   background-color: var(--brand-color-1);
-  width: 50px; 
+  width: 50px;
   height: 50px;
   position: fixed;
   bottom: -50px;
