criando modal de detalhes

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -116,6 +116,7 @@ header {
 
         input {
           color: black;
+          background-color: white;
           font-weight: 600;
         }
 
