--- a/src/components/Search/SearchItem/SearchItem.scss
+++ b/src/components/Search/SearchItem/SearchItem.scss
@@ -11,6 +11,72 @@
     border: 1px solid var(--brand-color-1);
   }
 
+  .search-details {
+    max-height: 80vw;
+    height: 80vh;
+    width: 80vw;
+    background-color: var(--black-300);
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: inset 0px 0px 1000px #000000;
+
+    button {
+      position: absolute;
+      left: 40px;
+      z-index: 2;
+
+      &:hover {
+        box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.5);
+      }
+    }
+
+    .search-overview {
+      position: absolute;
+      width: 70%;
+      right: 0px;
+      top: 0px;
+      text-align: right;
+      height: 100%;
+      padding: 0px 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      span {
+        position: relative;
+        z-index: 1;
+        font-size: clamp(15px, 2vw, 25px);
+        bottom: 10%;
+        font-weight: 500;
+        overflow: auto;
+        max-height: 55%
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.7803921569) 100%);
+        z-index: 0;
+      }
+    }
+
+    .title-search {
+      align-self: flex-end;
+      position: relative;
+      z-index: 1;
+      font-size: clamp(15px, 2vw, 25px);
+      font-weight: 500;
+    }
+  }
+
   label {
     align-self: flex-end;
     justify-self: center;
@@ -20,6 +86,7 @@
     text-align: center;
     font-size: 18px;
     font-weight: 500;
+    padding: 0px 10px;
   }
 
   &::before {
