--- a/src/components/Search/SearchItem/SearchItem.scss
+++ b/src/components/Search/SearchItem/SearchItem.scss
@@ -7,6 +7,38 @@
   margin: 10px;
   transition: all 0.5s;
 
+  &.placeholder {
+    background-color: var(--black-100);
+    position: relative;
+
+    &.movie::after {
+      mask-image: url(./../../../assets/icons/movie-icon.svg);
+    }
+
+    &.tv::after {
+      mask-image: url(./../../../assets/icons/tv-show.svg);
+    }
+
+    &.person::after {
+      mask-image: url(./../../../assets/icons/person.svg);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      max-height: 80px;
+      max-width: 80px;
+      mask-position: center;
+      mask-repeat: no-repeat;
+      mask-size: contain;
+      background-color: var(--black-400);
+      top: calc(50% - 40px);
+      left: calc(50% - 40px);
+    }
+  }
+
   &:hover {
     border: 1px solid var(--brand-color-1);
   }
@@ -15,7 +47,7 @@
     max-height: 80vw;
     height: 80vh;
     width: 80vw;
-    background-color: var(--black-300);
+    background-color: var(--brand-color-1);
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -24,6 +56,35 @@
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: inset 0px 0px 1000px #000000;
+
+    &.placeholder {
+      position: relative;
+
+      &.movie::after {
+        mask-image: url(./../../../assets/icons/movie-icon.svg);
+      }
+
+      &.tv::after {
+        mask-image: url(./../../../assets/icons/movie-icon.svg);
+      }
+
+      &.person::after {
+        mask-image: url(./../../../assets/icons/movie-icon.svg);
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 80%;
+        height: 80%;
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        mask-position: center;
+        background-color: var(--black-400);
+        opacity: 0.3;
+        left: -40px;
+      }
+    }
 
     button {
       position: absolute;
