--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -13,7 +13,7 @@
   cursor: pointer;
   user-select: none;
   -webkit-user-drag: none;
-   
+
   * {
     user-select: none;
     -webkit-user-drag: none;
@@ -31,6 +31,7 @@
     label {
       cursor: pointer;
       color: white;
+
       span {
         cursor: pointer;
         color: var(--brand-color-1);
@@ -50,13 +51,23 @@
   .shadow {
     position: absolute;
     width: 100%;
-    height: 55%;
+    height: 100%;
     bottom: 0px;
-    background-image: linear-gradient(
-      to bottom,
-      rgba(255, 255, 255, 0) 0%,
-      #000000c7 100%
-    );
+    background-image: linear-gradient(to bottom,
+        rgba(255, 255, 255, 0) 0%,
+        #000000c7 100%);
+  }
+
+  .pill {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    background-color: green;
+    padding: 2px 7px;
+    border-radius: 100vw;
+    font-size: 10px;
+    white-space: nowrap;
+    max-width: 50%;
   }
 
   .name {
@@ -66,7 +77,13 @@
     display: flex;
     align-items: flex-end;
     padding-bottom: 20px;
+
+    span {
+      font-weight: 700;
+      color: var(--black-100);
+    }
   }
+
   label {
     color: white;
     text-align: center;
