--- a/src/components/DetailsPage/DetailsCrewCast/DetailsCrewCast.scss
+++ b/src/components/DetailsPage/DetailsCrewCast/DetailsCrewCast.scss
@@ -2,10 +2,18 @@
   h3 {
     margin-bottom: 1.25rem;
   }
+
   .cast {
     display: flex;
     gap: 15px;
     overflow: auto;
     padding: 10px 0px;
+
+    @media screen and (max-width: 768px) {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 140px);
+      justify-content: center;
+      max-height: 600px;
+    }
   }
 }
