--- a/src/components/DetailsPage/DetailsForYou/DetailsForYou.scss
+++ b/src/components/DetailsPage/DetailsForYou/DetailsForYou.scss
@@ -28,9 +28,13 @@
     overflow-y: auto;
     overflow-x: hidden;
 
-    @media screen and (max-width: 1835px) {
+    @media screen and (max-width: 1835px) and (min-width: 768px) {
       overflow-y: hidden;
       overflow-x: auto;
+      max-width: unset;
+    }
+
+    @media screen and (max-width: 768px) {
       max-width: unset;
     }
 
@@ -39,6 +43,14 @@
       flex-wrap: wrap;
       transition: all 0.5s;
       gap: 15px;
+
+      @media screen and (max-width: 768px) {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 194px);
+        width: 100% !important;
+        max-height: 600px;
+        justify-content: center;
+      }
 
       @media screen and (max-width: 1835px) {
         flex-wrap: nowrap;
@@ -117,11 +129,9 @@
           width: 100%;
           height: 50%;
           position: absolute;
-          background: linear-gradient(
-            to bottom,
-            rgba(255, 255, 255, 0) 0%,
-            #000000c7 100%
-          );
+          background: linear-gradient(to bottom,
+              rgba(255, 255, 255, 0) 0%,
+              #000000c7 100%);
         }
 
         &::after {
