--- a/src/components/PresentationDetails/PresentationDetails.scss
+++ b/src/components/PresentationDetails/PresentationDetails.scss
@@ -20,7 +20,7 @@
       box-shadow: inset 0px 0px 0px 10p 100px black;
 
       &.skeleton-figure {
-       max-width: 0px;
+        max-width: 0px;
       }
 
       .frame {
@@ -32,12 +32,13 @@
           border: 0px;
           width: 100%;
           height: 100%;
-          
+
         }
       }
 
       &.movie {
         cursor: pointer;
+        position: relative;
 
         img {
           opacity: 0.8;
@@ -59,6 +60,7 @@
           width: calc(100vw - 60px);
         }
       }
+
       .play-btn {
         position: absolute;
         top: calc(50% - 35px);
@@ -89,7 +91,7 @@
     gap: 10px;
     position: absolute;
     bottom: 20px;
-    left: calc(50% - (20px * var(--data-length)));
+    left: calc(50% - (10px * var(--data-length)));
 
     @media screen and (max-width: 1320px) {
       left: calc(50vw - (20px * var(--data-length)));
@@ -147,16 +149,19 @@
     @extend .common-controls;
     left: 0px;
     border-radius: 0px 50px 50px 0px;
+
     &::before {
       mask-image: url(./../../assets/icons/chevron-left.svg);
       left: -12px;
 
     }
   }
+
   .control-right {
     @extend .common-controls;
     right: 0px;
     border-radius: 50px 0px 0px 50px;
+
     &::before {
       mask-image: url(./../../assets/icons/chevron-right.svg);
       right: -12px;
