--- a/src/components/DetailsPage/DetailsCrewCast/Cast/Cast.scss
+++ b/src/components/DetailsPage/DetailsCrewCast/Cast/Cast.scss
@@ -8,6 +8,7 @@
   flex-shrink: 0;
   transition: all 0.2s;
   cursor: pointer;
+  min-height: 283px;
 
   &:hover {
     box-shadow: 0px 0px 20px 5px var(--black-300);
@@ -16,6 +17,28 @@
   figure {
     min-width: 138px;
     min-height: 175px;
+
+    .profile-placeholder {
+      height: 175px;
+      width: 100%;
+      background-color: var(--black-100);
+      position: relative;
+
+      &::before {
+        content: '';
+        mask-image: url(./../../../../assets/icons/person.svg);
+        position: absolute;
+        mask-size: contain;
+        mask-repeat: no-repeat;
+        mask-position: center;
+        width: 50px;
+        height: 50px;
+        z-index: 10;
+        background-color: var(--black-400);
+        top: calc(50% - 25px);
+        left: calc(50% - 25px);
+      }
+    }
 
     img {
       max-width: 138px;
