--- a/src/components/DetailsPage/DetailsCrewCast/Cast/Cast.scss
+++ b/src/components/DetailsPage/DetailsCrewCast/Cast/Cast.scss
@@ -78,29 +78,18 @@
     background-color: var(--black-300);
     max-width: 1368px;
     max-height: 450px;
+    width: calc(100vw - 20px);
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
       max-height: calc(100vh - 40px);
       overflow: auto;
 
-      img {
-        min-width: 100%;
-        max-height: unset !important;
-      }
-
       .info-wrapper > label {
         overflow: hidden !important;
         max-height: unset !important;
       }
     }
-
-    img {
-      min-width: 300px;
-      max-height: 450px;
-      height: 100%;
-    }
-
 
     .info-wrapper {
       padding: 10px 20px;
@@ -121,8 +110,11 @@
 
         label {
           font-size: clamp(15px, 2vw, 20px);
-          max-height: 378px;
-          overflow: auto;
+
+          @media screen and (min-width: 768px) {
+            max-height: 278px;
+            overflow: auto;
+          }
         }
 
 
@@ -138,6 +130,7 @@
           gap: 30px;
           position: relative;
           flex-wrap: wrap;
+          margin-bottom: 2.5rem;
 
           @media screen and (min-width: 768px) {
             justify-content: space-around;
@@ -175,32 +168,6 @@
               &:hover {
                 text-decoration: underline;
               }
-            }
-          }
-        }
-
-        .combined-credits {
-          overflow-x: auto;
-
-          @media screen and (max-width: 768px) {
-            max-height: 600px;
-
-            h3 {
-              position: sticky;
-              top: 0px;
-              z-index: 10;
-              background-color: var(--black-300);
-            }
-          }
-
-          .combined-credits-list {
-            display: flex;
-            gap: 15px;
-
-            @media screen and (max-width: 768px) {
-              display: grid;
-              grid-template-columns: repeat(auto-fill, 160px);
-              justify-content: center;
             }
           }
         }
