--- a/src/components/DetailsPage/DetailsForYou/DetailsForYou.scss
+++ b/src/components/DetailsPage/DetailsForYou/DetailsForYou.scss
@@ -7,6 +7,7 @@
   @media screen and (max-width: 1835px) {
     margin-top: 2rem;
     width: 100%;
+    max-width: 1320px;
   }
 
   .title-loading {
