--- a/src/components/DetailsPage/DetailsOverview/DetailsOverview.scss
+++ b/src/components/DetailsPage/DetailsOverview/DetailsOverview.scss
@@ -31,6 +31,19 @@
       .tagline {
         color: var(--black-100);
         width: 40%;
+
+        @media screen and (max-width: 768px) {
+          width: 100%;
+        }
+      }
+
+      .status {
+        padding: 2px 10px;
+        background-color: var(--brand-color-1);
+        width: fit-content;
+        border-radius: 50px;
+        font-weight: 600;
+        margin-top: 0.75rem;
       }
 
       .time {
@@ -41,6 +54,7 @@
 
         span:first-child {
           position: relative;
+
           &::after {
             content: "●";
             position: relative;
