--- a/src/components/DetailsPage/DetailsOverview/Seasons/Season/Season.scss
+++ b/src/components/DetailsPage/DetailsOverview/Seasons/Season/Season.scss
@@ -2,40 +2,10 @@
   display: flex;
   gap: 10px;
 
-  .data-season-simple {
-    width: 120px;
-    height: 180px;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-shrink: 0;
-    flex-grow: 0;
-    position: relative;
-    border-radius: 8px;
-
-    span {
-      z-index: 1;
-      position: relative;
-      bottom: 10px;
-      font-weight: 600;
-    }
-
-    &::after {
-      content: '';
-      bottom: 0px;
-      width: 100%;
-      height: 50%;
-      position: absolute;
-      background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.7803921569) 100%);
-    }
-  }
-
   .overview {
-    max-height: 180px;
     overflow: auto;
+    width: 100%;
+    padding: 0px 30px 30px 30px;
 
     .date {
       font-weight: 500;
@@ -43,30 +13,76 @@
       margin-bottom: 1rem;
     }
 
-    &.direct-eps {
-      max-height: unset;
-      width: 100%;
-    }
-
     .episodes-wrapper {
       width: 100%;
 
       .episodes-container {
-        display: grid;
+        display: flex;
         gap: 15px;
-        grid-template-columns: repeat(auto-fill, minmax(180px, 286px));
+        flex-direction: column;
         width: 100%;
-        justify-content: center;
-        align-items: center;
+        margin-top: 30px;
 
-        .default.visible.card {
-          justify-self: center;
+        .episode-wrapper {
+          display: flex;
+          gap: 10px;
+          position: relative;
+          padding: 5px;
+          border-radius: 5px;
+          transition: all 0.5s;
+          cursor: pointer;
 
-        }
+          &:hover {
+            background-color: var(--brand-color-1);
+          }
 
-        .default.visible.card.details {
-          max-width: 270px;
-          min-height: 120px !important;
+          * {
+            z-index: 1;
+          }
+
+          &::before {
+            content: '';
+            position: absolute;
+            height: calc(100% - 4px);
+            width: calc(100% - 4px);
+            top: 2px;
+            left: 2px;
+            background-color: var(--black);
+            z-index: 1;
+            border-radius: 5px;
+          }
+
+          .episode-data {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            span {
+              display: -webkit-box;
+              -webkit-line-clamp: 4;
+              -webkit-box-orient: vertical;
+              overflow: hidden;
+              text-overflow: ellipsis;
+            }
+
+          }
+
+          .episode-container {
+            height: 120px;
+            width: 210px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: contain;
+            cursor: pointer;
+            border-radius: 8px;
+            border: 1px solid var(--black-300);
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            padding: 10px 5px;
+            flex-grow: 0;
+            flex-shrink: 0;
+          }
         }
       }
     }
