--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -19,4 +19,18 @@
       justify-content: center;
     }
   }
+
+  .tags {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    height: fit-content;
+
+    > div {
+      padding: 2px 10px;
+      background-color: var(--black-200);
+      border-radius: 100px;
+      pointer-events: none;
+    }
+  }
 }
