--- a/src/components/Average/Average.scss
+++ b/src/components/Average/Average.scss
@@ -18,7 +18,7 @@
   }
 
   &::after {
-    content: '73%';
+    content: attr(average-value);
     position: absolute;
     width: calc(100% - 8px);
     height: calc(100% - 8px);
