--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -56,6 +56,18 @@
     background-image: linear-gradient(to bottom,
         rgba(255, 255, 255, 0) 0%,
         #000000c7 100%);
+
+    &::before {
+      content: attr(average-value);
+      width: fit-content;
+      height: fit-content;
+      padding: 2px 5px;
+      right: 0;
+      position: absolute;
+      font-weight: 600;
+      color: var(--brand-color-1);
+      background-color: #4f4e5065;
+    }
   }
 
   .pill {
