--- a/src/components/DetailsPage/DetailsOverview/DetailsOverview.scss
+++ b/src/components/DetailsPage/DetailsOverview/DetailsOverview.scss
@@ -6,6 +6,16 @@
   flex-direction: column;
   gap: 40px;
 
+  .images-videos {
+    position: relative;
+
+    .average {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+    }
+  }
+
   h3 {
     margin-top: 1.75rem;
     font-weight: 600;
