--- a/src/components/DetailsPage/DetailsOverview/Seasons/Season/DetailsSeasonPresentation/DetailsSeasonPresentation.scss
+++ b/src/components/DetailsPage/DetailsOverview/Seasons/Season/DetailsSeasonPresentation/DetailsSeasonPresentation.scss
@@ -5,5 +5,37 @@
   img {
     width: 100%;
     object-fit: contain;
+
+    &:not([src]) {
+      min-height: 160px;
+      position: relative;
+      background-color: var(--black-300);
+      overflow: hidden;
+
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--black-300);
+      }
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 50%;
+        height: 50%;
+        mask-size: contain;
+        mask-image: url(./../../../../../../assets/icons/live-show.svg);
+        mask-repeat: no-repeat;
+        mask-position: center;
+        top: 25%;
+        left: 25%;
+        background-color: var(--black-400);
+      }
+    }
   }
 }
